--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -8,4 +8,4 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=true
+spring.jpa.properties.hibernate.type=trace
