--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#MYSQL
+# MySQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=
 
-#EXIBE COMANDOS SQL
+# exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
